--- a/test_mkdwn.Rmd
+++ b/test_mkdwn.Rmd
@@ -2,7 +2,9 @@
 title: "test markdown"
 author: "luke durell"
 date: "10/1/2020"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
